<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/landscape"
    android:backgroundTintMode="screen"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/main_title_textView"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/main_subtitle_textView"
        android:textAlignment="center"
        android:textColor="#FF5733"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textView4"
        style="@style/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/main_location_textView"
        android:textColor="#273746"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="27dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/main_description_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.015"
        app:srcCompat="@drawable/localizacion" />

    <TextView
        android:id="@+id/textView7"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="323dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:text="@string/main_description_textView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#273746"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView8"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="326dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="152dp"
        android:text="@string/main_introduction_textView"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FAFAFA"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.943" />

    <Button
        android:id="@+id/adventure_button"
        style="@style/Title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="?android:attr/panelBackground"
        android:shadowColor="@color/cardview_shadow_end_color"
        android:text="@string/main_listactivity_Button"
        android:textAllCaps="false"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/cardview_shadow_end_color"
        app:strokeColor="@color/teal_700" />

</androidx.constraintlayout.widget.ConstraintLayout>